Fixed depreciated URL issue and added UV index for DayData